# legged-navigation-rl

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cyclonedds/lib/: libcycloneddsidl.so.0.10.5
install/cyclonedds/lib/pkgconfig/: CycloneDDS.pc
install/cyclonedds/share/cyclonedds/: package.sh
install/go2_description/share/ament_index/resource_index/package_run_dependencies/: go2_description
install/go2_description/share/ament_index/resource_index/parent_prefix_path/: go2_description
install/go2_description/share/go2_description/: package.sh
install/go2_description/share/go2_description/launch/: check_joint.rviz2  gazebo.py  go2_rviz.py
install/go2_description/share/go2_description/urdf/: go2_description.urdf
install/go2_interaction/include/: legged_interaction_node.hpp
install/go2_interaction/lib/go2_interaction/: legged_interaction_node
install/go2_interaction/share/ament_index/resource_index/package_run_dependencies/: go2_interaction
install/go2_interaction/share/ament_index/resource_index/parent_prefix_path/: go2_interaction
install/go2_interaction/share/go2_interaction/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_interaction/share/go2_interaction/cmake/: ament_cmake_export_libraries-extras.cmake  go2_interactionConfig.cmake
install/rmw_cyclonedds_cpp/share/rmw_cyclonedds_cpp/: package.sh
install/unitree_api/share/ament_index/resource_index/parent_prefix_path/: unitree_api
install/unitree_api/share/unitree_api/: local_setup.sh  package.sh
install/unitree_go/share/unitree_go/: package.sh
install/unitree_hg/include/unitree_hg/unitree_hg/msg/: bms_cmd.hpp  hand_cmd.hpp  low_cmd.hpp  low_state.hpp  main_board_state.hpp  motor_cmd.hpp
install/unitree_hg/include/unitree_hg/unitree_hg/msg/detail/: hand_cmd__builder.hpp  hand_cmd__struct.h  hand_cmd__struct.hpp  hand_cmd__traits.hpp  hand_cmd__type_support.c  hand_cmd__type_support.cpp  hand_state__builder.hpp  hand_state__functions.c  hand_state__type_support.c  hand_state__type_support.cpp  press_sensor_state__traits.hpp  press_sensor_state__type_support.cpp
install/unitree_hg/local/lib/python3.10/dist-packages/unitree_hg/msg/: _hand_state.py
install/unitree_hg/share/unitree_hg/: local_setup.sh  package.sh
install/unitree_ros2_example/share/ament_index/resource_index/parent_prefix_path/: unitree_ros2_example
install/unitree_ros2_example/share/unitree_ros2_example/: package.sh
log/: latest_build
src/GO2_URDF/: CMakeLists.txt
src/GO2_URDF/launch/: check_joint.rviz
src/Point-LIO/: CMakeLists.txt
src/Point-LIO/Log/: mat_out.txt  pos_log.txt
src/Point-LIO/config/: mid360.yaml  unilidar_l1.yaml  velody16.yaml
src/Point-LIO/launch/: point_lio.launch.py
src/Point-LIO/rviz_cfg/: loam_livox.rviz
src/Point-LIO/src/: laserMapping.cpp  li_initialization.cpp  preprocess.cpp  preprocess.h  slam_tf_publisher.cpp
src/bringup/: package.xml  setup.py
src/bringup/launch/: bringup.launch.py
src/elevation_mapping/config/elevation_maps/: long_range.yaml
src/elevation_mapping/config/robots/: ground_truth_demo.yaml  simple_demo_robot.yaml
src/elevation_mapping/config/sensor_processors/: livox_mid360.yaml
src/elevation_mapping/launch/: elevationMapping_launch.py
src/elevation_mapping/src/sensor_processors/: SensorProcessorBase.cpp
src/go2_description/: package.xml
src/go2_description/config/: joint_names_go2_description.yaml
src/go2_description/launch/: check_joint.rviz  go2_rviz.launch.py  go2_rviz.py
src/go2_description/urdf/: go2_description.urdf
src/go2_interaction/: CMakeLists.txt  package.xml
src/go2_interaction/include/: legged_interaction_node.hpp
src/go2_interaction/src/: legged_interaction_node.cpp
src/kindr_ros/kindr_msgs/: CMakeLists.txt
src/legged_control/: package.xml  setup.cfg  setup.py
src/legged_control/config/: go2.yaml
src/legged_control/launch/: legged_control.launch.py
src/legged_control/legged_control/: controller.py  legged_control.py
src/legged_control/legged_control/common/: command_helper.py  config.py  crc.py  remote_controller.py
src/legged_control/legged_control/policy/: policy.pt  policy_1.pt
src/livox_ros_driver2/config/: MID360_config.json
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: params.yaml
src/navigation/launch/: navigation.launch.py
src/point_lio_unilidar_ros2/: CMakeLists.txt  package.xml
src/point_lio_unilidar_ros2/config/: mid360.yaml  unilidar_l1.yaml
src/point_lio_unilidar_ros2/include/: common_lib.h
src/point_lio_unilidar_ros2/launch/: mapping_mid360.launch.py  mapping_unilidar_l1.launch.py
src/point_lio_unilidar_ros2/rviz_cfg/: loam_unilidar_display.rviz
src/point_lio_unilidar_ros2/src/: IMU_Processing.hpp  laserMapping.cpp  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
src/unitree_ros2/: setup.sh  setup_default.sh  setup_local.sh
