<?xml version="1.0"?>
<package format="3">
  <name>point_lio_unilidar</name>
  <version>0.1.0</version>

  <description>
    This is a modified version of LOAM which is original algorithm
    is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="lukelbmeng@gmail.com">Lingbo Meng</maintainer>

  <license>BSD</license>

  <author email="lukelbmeng@gmail.com">Lingbo Meng</author>

  <!-- Build tool dependency for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies for ROS 2 -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>message_generation</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosbag2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
